--- a/estilo.css
+++ b/estilo.css
@@ -80,6 +80,7 @@ main{
 background-color: aliceblue;
 min-width: 280px;
 max-width: 600px;
+width: 100%;
 margin: auto;
 border-radius: 10px;
 padding: 10px;
